# rust_game_server

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Makefile
config/: zone.local.toml  zone.prod.toml
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/sim_core/: Cargo.toml
crates/sim_core/src/: aoi.rs  components.rs  history.rs  lib.rs  math.rs  resources.rs
crates/sim_core/src/systems/: combat.rs  input.rs  mod.rs  movement.rs  replication.rs
services/zone_server/: Cargo.toml
services/zone_server/src/: main.rs
