[package]
name = "moonhold-zone-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "time", "net"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
bincode = { version = "2.0.1", features = ["serde"] }
config = "0.15.15"
dotenvy = "0.15.7"

renet = "1.1.0"
renet_netcode = "1.1.0"

hecs = "0.10.5"

moonhold-protocol = { path = "../../crates/protocol" }
moonhold-sim      = { path = "../../crates/sim_core" }